Fix Left sidebar scrollbar is shown in StationList

--- a/src/assets/style/cmps/_LeftSidebar.scss
+++ b/src/assets/style/cmps/_LeftSidebar.scss
@@ -14,9 +14,9 @@
         display: grid;
         row-gap: 1em;
 
-        & > * {
-            overflow-x: hidden;
-        }
+        // & > * {
+        //     overflow-x: hidden;
+        // }
 
         .sidebar-header {
             display: grid;
